syntax = "proto3";

package hippo;

//The Hippo service definition.
service Hippo {
 rpc Run (RunRequest) returns (RunReply);
}


enum ValueType {
    UNKNOWN = 0;

    FLOAT16 = 1;
    FLOAT32 = 2;
    FLOAT64 = 3;

    UINT8 = 4;
    UINT16 = 5;
    UINT32 = 6;
    UINT64 = 7;

    INT8 = 8;
    INT16 = 9;
    INT32 = 10;
    INT64 = 11;

    COMPLEX64 = 12;
    COMPLEX128 = 13;
}

message Shape {
    repeated int64 Value = 1;
}

message Tensor {
    ValueType Type = 1;
    Shape     Shape = 2;
    bytes     Data = 3;
}

message RunRequest {
    string          ModelID = 1;
    repeated Tensor Tensors = 2;
}

message RunReply {
    repeated Tensor Tensors = 1;
}
